--- a/src/BigVisibleCruise/app.config
+++ b/src/BigVisibleCruise/app.config
@@ -9,15 +9,26 @@
   xml lives that the application will use to find out the status of a project that is running
   under cruise.
   
-      <setting name="Dashboards" serializeAs="String">
-        <value>http://ccnetlive.thoughtworks.com/ccnet/XmlStatusReport.aspx</value>
+      <setting name="Dashboards" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>http://one/ccnet/XmlStatusReport.aspx</string>
+          </ArrayOfString>
+        </value>
       </setting>
    
   If you want to aggregate multiple locations into one BigVisibleCruise window, you can add multiple
-  location by delimiting them with a comma.
+  locations by adding the appropriate settings.
   
-      <setting name="Dashboards" serializeAs="String">
-        <value>http://one/ccnet/XmlStatusReport.aspx,http://two/ccnet/XmlStatusReport.aspx</value>
+        <setting name="Dashboards" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>http://one/ccnet/XmlStatusReport.aspx</string>
+            <string>http://two/ccnet/XmlStatusReport.aspx</string>
+          </ArrayOfString>
+        </value>
       </setting>
       
    You have control over the polling frequency that the application uses to poll the dashboards that
@@ -28,6 +39,21 @@
    
       <setting name="PollFrequency" serializeAs="String">
         <value>00:00:15</value>
+      </setting>
+  
+  If you would like to create more readable names from your dashboard names, you can map them. An
+  equals sign will guide the replacement. Below a project with the name of 'before' will display
+  as 'after' on the screen, a project with the name of 'before 2' will display as 'after 2' on
+  the screen.
+  
+        <setting name="ProjectNameSubstitutions" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>before=after</string>
+            <string>before 2=after 2</string>
+          </ArrayOfString>
+        </value>
       </setting>
   
   -->
@@ -41,8 +67,22 @@
       <setting name="PollFrequency" serializeAs="String">
         <value>00:00:15</value>
       </setting>
-      <setting name="Dashboards" serializeAs="String">
-        <value>http://ccnetlive.thoughtworks.com/ccnet/XmlStatusReport.aspx</value>
+      <setting name="ProjectNameSubstitutions" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>ccnetlive=CC Net Live</string>
+            <string>NMock=This is NMock!</string>
+          </ArrayOfString>
+        </value>
+      </setting>
+      <setting name="Dashboards" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>http://ccnetlive.thoughtworks.com/ccnet/XmlStatusReport.aspx</string>
+          </ArrayOfString>
+        </value>
       </setting>
     </BigVisibleCruise.Properties.Settings>
   </applicationSettings>
