--- a/src/BigVisibleCruise/app.config
+++ b/src/BigVisibleCruise/app.config
@@ -2,61 +2,106 @@
 <configuration>
   <!--
   
-  For BigVisibleCruise to display your status report, you need to tell it where your dashboard or 
-  dashboards live.
+  A complete example of BigVisibleCruise can be see below...
+  *************************************************************************************************
   
-  The url that you need provide should end with "XmlStatusReport.aspx." This location is where the
-  xml lives that the application will use to find out the status of a project that is running
-  under cruise.
-  
-      <setting name="Dashboards" serializeAs="Xml">
+    <BigVisibleCruise.Properties.Settings>
+      <setting name="PollFrequency" serializeAs="String">
+        <value>00:00:15</value>
+      </setting>
+      <setting name="Dashboard" serializeAs="String">
+        <value>http://ccnetlive.thoughtworks.com/ccnet/XmlStatusReport.aspx</value>
+      </setting>      
+      <setting name="ProjectNameSubstitutions" serializeAs="Xml">
         <value>
           <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-            <string>http://one/ccnet/XmlStatusReport.aspx</string>
+            <string>NMock=NMock Project</string>
+            <string>CCNet=Cruise Control .Net Project</string>
           </ArrayOfString>
         </value>
       </setting>
-   
-  If you want to aggregate multiple locations into one BigVisibleCruise window, you can add multiple
-  locations by adding the appropriate settings.
-  
-        <setting name="Dashboards" serializeAs="Xml">
+      <setting name="ProjectNamesToInclude" serializeAs="Xml">
         <value>
           <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-            <string>http://one/ccnet/XmlStatusReport.aspx</string>
-            <string>http://two/ccnet/XmlStatusReport.aspx</string>
+            <string>NMock</string>
+            <string>CCNet</string>
           </ArrayOfString>
         </value>
-      </setting>
-      
-   You have control over the polling frequency that the application uses to poll the dashboards that
-   are configured. At the stated polling interval the application will request the Dasboards that
-   have been configure.
+      </setting>      
+    </BigVisibleCruise.Properties.Settings>
+  
+  Examples of the individuals settings are outlined below...
+  
+  Polling Frequency
+  *************************************************************************************************
+  
+  You have control over the polling frequency that the application uses to poll the dashboards that
+  are configured. At the stated polling interval the application will request the Dasboards that
+  have been configure.
    
-   By default, the polling service is configured to poll every 15 seconds.
+  By default, the polling service is configured to poll every 15 seconds.
    
       <setting name="PollFrequency" serializeAs="String">
         <value>00:00:15</value>
       </setting>
   
-  If you would like to create more readable names from your dashboard names, you can map them. An
-  equals sign will guide the replacement. Below a project with the name of 'before' will display
-  as 'after' on the screen, a project with the name of 'before 2' will display as 'after 2' on
-  the screen.
+  Dashboard Setting
+  *************************************************************************************************
   
-        <setting name="ProjectNameSubstitutions" serializeAs="Xml">
+  For BigVisibleCruise to display your status report, you need to tell it where your dashboard lives.
+  
+  The url that you need provide should end with "XmlStatusReport.aspx." This location is where the
+  xml lives that the application will use to find out the status of a project that is running
+  under cruise.
+  
+      <setting name="Dashboard" serializeAs="String">
+        <value>http://ccnetlive.thoughtworks.com/ccnet/XmlStatusReport.aspx</value>
+      </setting>
+  
+  
+  Project Name Substitutions
+  *************************************************************************************************
+  
+  If you would like to create more readable names from your dashboard names, you can map them. An
+  equals sign will guide the replacement. Below a project with the name of 'NMock' will display
+  as 'NMock Project' on the screen, a project with the name of 'CCNet' will display as 'Cruise 
+  Control .Net Project' on the screen.
+  
+      <setting name="ProjectNameSubstitutions" serializeAs="Xml">
         <value>
           <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-            <string>before=after</string>
-            <string>before 2=after 2</string>
+            <string>NMock=NMock Project</string>
+            <string>CCNet=Cruise Control .Net Project</string>
+          </ArrayOfString>
+        </value>
+      </setting>
+      
+  Selective Projective Display
+  *************************************************************************************************
+  
+  The web dashboard from CCNet brings back all of the projects that are specified in the service
+  configuration file. By default, BigVisibleCruise will display every project that is being run on
+  the server. If you would like to filter the projects, the following configuration can be added
+  to request that individual projects are displayed.
+  
+      <setting name="ProjectNamesToInclude" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>NMock</string>
+            <string>CCNet</string>
           </ArrayOfString>
         </value>
       </setting>
   
   -->
+
+
+
+
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
       <section name="BigVisibleCruise.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -67,20 +112,24 @@
       <setting name="PollFrequency" serializeAs="String">
         <value>00:00:15</value>
       </setting>
+      <setting name="Dashboard" serializeAs="String">
+        <value>http://ccnetlive.thoughtworks.com/ccnet/XmlStatusReport.aspx</value>
+      </setting>
       <setting name="ProjectNameSubstitutions" serializeAs="Xml">
         <value>
           <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-            <string>ccnetlive=CC Net Live</string>
-            <string>NMock=This is NMock!</string>
+            <string>NMock=NMock Project</string>
+            <string>CCNet=Cruise Control .Net Project</string>
           </ArrayOfString>
         </value>
       </setting>
-      <setting name="Dashboards" serializeAs="Xml">
+      <setting name="ProjectNamesToInclude" serializeAs="Xml">
         <value>
           <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-            <string>http://ccnetlive.thoughtworks.com/ccnet/XmlStatusReport.aspx</string>
+            <string>NMock</string>
+            <string>CCNet</string>
           </ArrayOfString>
         </value>
       </setting>
