--- a/src/CruiseControlToys.Lib/CruiseControlToys.Lib.csproj
+++ b/src/CruiseControlToys.Lib/CruiseControlToys.Lib.csproj
@@ -37,6 +37,7 @@
     <Compile Include="..\SolutionInfo.cs">
       <Link>SolutionInfo.cs</Link>
     </Compile>
+    <Compile Include="CommunicationException.cs" />
     <Compile Include="DashboardResolver.cs" />
     <Compile Include="IResolver.cs" />
     <Compile Include="ProjectStatus.cs" />
