--- a/trunk/src/CruiseControlToys.Lib/CruiseControlToys.Lib.csproj
+++ b/trunk/src/CruiseControlToys.Lib/CruiseControlToys.Lib.csproj
@@ -37,8 +37,8 @@
     <Compile Include="..\SolutionInfo.cs">
       <Link>SolutionInfo.cs</Link>
     </Compile>
-    <Compile Include="CommunicationException.cs" />
-    <Compile Include="DashboardResolver.cs" />
+    <Compile Include="DashboardCommunicationException.cs" />
+    <Compile Include="CCNetDashboardResolver.cs" />
     <Compile Include="IResolver.cs" />
     <Compile Include="ProjectStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
