Rename and configuration update for support of Java and .rb versions of Cruise. This will work as long as the cruise implementation supports the expected xml format (which is the same across the implementations).

--- a/src/CruiseControlToys.Lib/CruiseControlToys.Lib.csproj
+++ b/src/CruiseControlToys.Lib/CruiseControlToys.Lib.csproj
@@ -38,7 +38,7 @@
       <Link>SolutionInfo.cs</Link>
     </Compile>
     <Compile Include="DashboardCommunicationException.cs" />
-    <Compile Include="CCNetDashboardResolver.cs" />
+    <Compile Include="HttpProjectXmlResolver.cs" />
     <Compile Include="IResolver.cs" />
     <Compile Include="ProjectStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
