--- a/src/BigVisibleCruise/app.config
+++ b/src/BigVisibleCruise/app.config
@@ -2,6 +2,7 @@
 <configuration>
   <!--
   
+  *************************************************************************************************
   A complete example of BigVisibleCruise can be see below...
   *************************************************************************************************
   
@@ -32,8 +33,11 @@
       </setting>      
     </BigVisibleCruise.Properties.Settings>
   
+  
+  
   Examples of the individuals settings are outlined below...
   
+  *************************************************************************************************
   Polling Frequency
   *************************************************************************************************
   
@@ -47,20 +51,37 @@
         <value>00:00:15</value>
       </setting>
   
+  *************************************************************************************************
   Dashboard Setting
   *************************************************************************************************
   
   For BigVisibleCruise to display your status report, you need to tell it where your dashboard lives.
   
-  The url that you need provide should end with "XmlStatusReport.aspx." This location is where the
-  xml lives that the application will use to find out the status of a project that is running
-  under cruise.
+  There are a variety of Cruise Control implementations that publish this information. The flavor
+  of cruise that you are using (Java, .Net, .rb) needs to support an endpoint with this xml 
+  exposed.
+  
+  For this setting, put in the url of the xml.
+
+  Here is a Java example...
+  
+      <setting name="Dashboard" serializeAs="String">
+        <value>http://www.spice-3d.org/cruise/xml</value>
+      </setting>
+
+  Here is a .Net example...
   
       <setting name="Dashboard" serializeAs="String">
         <value>http://ccnetlive.thoughtworks.com/ccnet/XmlStatusReport.aspx</value>
       </setting>
+      
+  Here is a .rb example...
   
+      <setting name="Dashboard" serializeAs="String">
+        <value>http://cruisecontrolrb.thoughtworks.com/XmlStatusReport.aspx</value>
+      </setting>
   
+  *************************************************************************************************
   Project Name Substitutions
   *************************************************************************************************
   
@@ -78,7 +99,8 @@
           </ArrayOfString>
         </value>
       </setting>
-      
+  
+  *************************************************************************************************
   Selective Projective Display
   *************************************************************************************************
   
@@ -98,7 +120,6 @@
       </setting>
   
   -->
-
 
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
