--- a/src/BigVisibleCruise/app.config
+++ b/src/BigVisibleCruise/app.config
@@ -142,14 +142,14 @@
           </ArrayOfString>
         </value>
       </setting>
-      <setting name="ProjectNamesToInclude" serializeAs="Xml">
+      <!--<setting name="ProjectNamesToInclude" serializeAs="Xml">
         <value>
           <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <string>CCNet</string>
           </ArrayOfString>
         </value>
-      </setting>
+      </setting>-->
     </BigVisibleCruise.Properties.Settings>
   </applicationSettings>
 </configuration>
