--- a/trunk/src/BigVisibleCruise/app.config
+++ b/trunk/src/BigVisibleCruise/app.config
@@ -30,10 +30,11 @@
             <string>CCNet</string>
           </ArrayOfString>
         </value>
+      </setting>     
+      <setting name="Skin" serializeAs="String">
+        <value>.\Skins\LiveStackedStatus.xaml</value>
       </setting>      
     </BigVisibleCruise.Properties.Settings>
-  
-  
   
   Examples of the individuals settings are outlined below...
   
@@ -101,7 +102,7 @@
       </setting>
   
   *************************************************************************************************
-  Selective Projective Display
+  Selective Project Display
   *************************************************************************************************
   
   The web dashboard from CCNet brings back all of the projects that are specified in the service
@@ -119,9 +120,25 @@
         </value>
       </setting>
   
+  *************************************************************************************************
+  Skin Selection
+  *************************************************************************************************
+  
+  For the uniform view (distributed evenly)...
+  
+      <setting name="Skin" serializeAs="String">
+        <value>.\Skins\LiveUniformStatus.xaml</value>
+      </setting>
+
+ For the vertically stacked view...
+ 
+      <setting name="Skin" serializeAs="String">
+        <value>.\Skins\LiveStackedStatus.xaml</value>
+      </setting>
+  
   -->
 
-  <configSections>
+ <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
       <section name="BigVisibleCruise.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
@@ -134,22 +151,9 @@
       <setting name="Dashboard" serializeAs="String">
         <value>http://ccnetlive.thoughtworks.com/ccnet/XmlStatusReport.aspx</value>
       </setting>
-      <setting name="ProjectNameSubstitutions" serializeAs="Xml">
-        <value>
-          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-            <string>CCNet=Cruise Control .Net Project</string>
-          </ArrayOfString>
-        </value>
+      <setting name="Skin" serializeAs="String">
+        <value>.\Skins\LiveUniformStatus.xaml</value>
       </setting>
-      <!--<setting name="ProjectNamesToInclude" serializeAs="Xml">
-        <value>
-          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-            <string>CCNet</string>
-          </ArrayOfString>
-        </value>
-      </setting>-->
     </BigVisibleCruise.Properties.Settings>
   </applicationSettings>
 </configuration>
