--- a/src/BigVisibleCruise/Properties/Settings.settings
+++ b/src/BigVisibleCruise/Properties/Settings.settings
@@ -8,11 +8,14 @@
     <Setting Name="ProjectNameSubstitutions" Type="System.Collections.Specialized.StringCollection" Scope="Application">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="Dashboard" Type="System.String" Scope="Application">
-      <Value Profile="(Default)" />
-    </Setting>
     <Setting Name="ProjectNamesToInclude" Type="System.Collections.Specialized.StringCollection" Scope="Application">
       <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="Dashboard" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">http://ccnetlive.thoughtworks.com/ccnet/XmlStatusReport.aspx</Value>
+    </Setting>
+    <Setting Name="Skin" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">.\Skins\LiveStackedStatus.xaml</Value>
     </Setting>
   </Settings>
 </SettingsFile>
