--- a/trunk/src/BigVisibleCruise/BigVisibleCruise.csproj
+++ b/trunk/src/BigVisibleCruise/BigVisibleCruise.csproj
@@ -103,4 +103,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.WinFX.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
+  </PropertyGroup>
 </Project>
