Updated the loading of the skins to not include the path to the skin. Went the route of convention. Not really sure how to do this long term.

--- a/src/BigVisibleCruise/app.config
+++ b/src/BigVisibleCruise/app.config
@@ -32,8 +32,8 @@
         </value>
       </setting>     
       <setting name="Skin" serializeAs="String">
-        <value>.\Skins\LiveStackedStatus.xaml</value>
-      </setting>      
+        <value>LiveUniformStatus</value>
+      </setting>
     </BigVisibleCruise.Properties.Settings>
   
   Examples of the individuals settings are outlined below...
@@ -127,13 +127,13 @@
   For the uniform view (distributed evenly)...
   
       <setting name="Skin" serializeAs="String">
-        <value>.\Skins\LiveUniformStatus.xaml</value>
+        <value>LiveUniformStatus</value>
       </setting>
 
  For the vertically stacked view...
  
       <setting name="Skin" serializeAs="String">
-        <value>.\Skins\LiveStackedStatus.xaml</value>
+        <value>LiveStackedStatus</value>
       </setting>
   
   -->
@@ -152,7 +152,7 @@
         <value>http://ccnetlive.thoughtworks.com/ccnet/XmlStatusReport.aspx</value>
       </setting>
       <setting name="Skin" serializeAs="String">
-        <value>.\Skins\LiveUniformStatus.xaml</value>
+        <value>LiveUniformStatus</value>
       </setting>
     </BigVisibleCruise.Properties.Settings>
   </applicationSettings>
