* Lots of minor coding tweaks and reshuffling.  * Added gui for settings configuration  * Added keybindings for fullscreen, options, refresh  * Removed some of the little-used features in the config (rename / filter functionality)  * Moved settings to user-specific instead of machine-specific

--- a/src/BigVisibleCruise.Tests/BigVisibleCruise.Tests.csproj
+++ b/src/BigVisibleCruise.Tests/BigVisibleCruise.Tests.csproj
@@ -41,14 +41,15 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\SolutionInfo.cs">
       <Link>SolutionInfo.cs</Link>
     </Compile>
-    <Compile Include="BuildNameToHumanizedNameConverter_IntegrationTests.cs" />
-    <Compile Include="BuildNameToHumanizedNameConverter_Test.cs" />
-    <Compile Include="BuildStatusToColorConverter_Test.cs" />
+    <Compile Include="Commands\FullscreenCommand_Test.cs" />
+    <Compile Include="Converters\BuildNameToHumanizedNameConverter_Test.cs" />
+    <Compile Include="Converters\BuildStatusToColorConverter_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
