--- a/src/BigVisibleCruise/app.config
+++ b/src/BigVisibleCruise/app.config
@@ -13,24 +13,6 @@
       <setting name="Dashboard" serializeAs="String">
         <value>http://ccnetlive.thoughtworks.com/ccnet/XmlStatusReport.aspx</value>
       </setting>      
-      <setting name="ProjectNameSubstitutions" serializeAs="Xml">
-        <value>
-          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-            <string>NMock=NMock Project</string>
-            <string>CCNet=Cruise Control .Net Project</string>
-          </ArrayOfString>
-        </value>
-      </setting>
-      <setting name="ProjectNamesToInclude" serializeAs="Xml">
-        <value>
-          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-            <string>NMock</string>
-            <string>CCNet</string>
-          </ArrayOfString>
-        </value>
-      </setting>     
       <setting name="Skin" serializeAs="String">
         <value>LiveUniformStatus</value>
       </setting>
@@ -81,45 +63,7 @@
       <setting name="Dashboard" serializeAs="String">
         <value>http://cruisecontrolrb.thoughtworks.com/XmlStatusReport.aspx</value>
       </setting>
-  
-  *************************************************************************************************
-  Project Name Substitutions
-  *************************************************************************************************
-  
-  If you would like to create more readable names from your dashboard names, you can map them. An
-  equals sign will guide the replacement. Below a project with the name of 'NMock' will display
-  as 'NMock Project' on the screen, a project with the name of 'CCNet' will display as 'Cruise 
-  Control .Net Project' on the screen.
-  
-      <setting name="ProjectNameSubstitutions" serializeAs="Xml">
-        <value>
-          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-            <string>NMock=NMock Project</string>
-            <string>CCNet=Cruise Control .Net Project</string>
-          </ArrayOfString>
-        </value>
-      </setting>
-  
-  *************************************************************************************************
-  Selective Project Display
-  *************************************************************************************************
-  
-  The web dashboard from CCNet brings back all of the projects that are specified in the service
-  configuration file. By default, BigVisibleCruise will display every project that is being run on
-  the server. If you would like to filter the projects, the following configuration can be added
-  to request that individual projects are displayed.
-  
-      <setting name="ProjectNamesToInclude" serializeAs="Xml">
-        <value>
-          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-            <string>NMock</string>
-            <string>CCNet</string>
-          </ArrayOfString>
-        </value>
-      </setting>
-  
+    
   *************************************************************************************************
   Skin Selection
   *************************************************************************************************
@@ -139,21 +83,21 @@
   -->
 
  <configSections>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="BigVisibleCruise.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    </sectionGroup>
+  <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+   <section name="BigVisibleCruise.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+  </sectionGroup>
   </configSections>
-  <applicationSettings>
+  <userSettings>
     <BigVisibleCruise.Properties.Settings>
-      <setting name="PollFrequency" serializeAs="String">
-        <value>00:00:15</value>
-      </setting>
       <setting name="Dashboard" serializeAs="String">
         <value>http://ccnetlive.thoughtworks.com/ccnet/XmlStatusReport.aspx</value>
       </setting>
       <setting name="Skin" serializeAs="String">
         <value>LiveUniformStatus</value>
       </setting>
+      <setting name="PollFrequency" serializeAs="String">
+        <value>00:00:15</value>
+      </setting>
     </BigVisibleCruise.Properties.Settings>
-  </applicationSettings>
+  </userSettings>
 </configuration>
