Modified the settings window a bit (introduced slider) and some general reorganization.

--- a/src/BigVisibleCruise/BigVisibleCruise.csproj
+++ b/src/BigVisibleCruise/BigVisibleCruise.csproj
@@ -75,6 +75,8 @@
     <Compile Include="Converters\BuildStatusToColorConverter.cs" />
     <Compile Include="Commands\CommandContainer.cs" />
     <Compile Include="Commands\FullscreenCommand.cs" />
+    <Compile Include="Converters\SliderValueInSecondsToReadableTimeFormatConverter.cs" />
+    <Compile Include="Converters\TimeSpanToDoubleConverter.cs" />
     <Compile Include="HumaneMessageWindow.xaml.cs">
       <DependentUpon>HumaneMessageWindow.xaml</DependentUpon>
     </Compile>
