Working through some modifications on the settings dialog. Changed from "Xml Url" to "Dashboard Url." Trying to move towards the user mental model instead of the implementation model.

--- a/src/BigVisibleCruise.Tests/BigVisibleCruise.Tests.csproj
+++ b/src/BigVisibleCruise.Tests/BigVisibleCruise.Tests.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Commands\FullscreenCommand_Test.cs" />
     <Compile Include="Converters\BuildNameToHumanizedNameConverter_Test.cs" />
     <Compile Include="Converters\BuildStatusToColorConverter_Test.cs" />
+    <Compile Include="Converters\CruiseDashboardToStatusUrlConverter_Test.cs" />
     <Compile Include="Converters\SliderValueInSecondsToReadableTimeFormatConverter_Test.cs" />
     <Compile Include="Converters\TimeSpanToDoubleConverter_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
