--- a/src/CruiseControlToys.Lib/CruiseControlToys.Lib.csproj
+++ b/src/CruiseControlToys.Lib/CruiseControlToys.Lib.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{F94C94DC-F5CB-4658-B25C-639A3F3E2819}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -46,9 +46,11 @@
     <Compile Include="..\SolutionInfo.cs">
       <Link>SolutionInfo.cs</Link>
     </Compile>
+    <Compile Include="CruiseAddress.cs" />
     <Compile Include="DashboardCommunicationException.cs" />
     <Compile Include="HttpProjectXmlResolver.cs" />
     <Compile Include="IResolver.cs" />
+    <Compile Include="IWebClient.cs" />
     <Compile Include="ProjectStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
