Changed a few items to add filtering. Not accessible yet though. Just getting the changes in there.

--- a/src/BigVisibleCruise/app.config
+++ b/src/BigVisibleCruise/app.config
@@ -98,6 +98,9 @@
       <setting name="PollFrequency" serializeAs="String">
         <value>00:00:30</value>
       </setting>
+      <setting name="IncludeProjectRegEx" serializeAs="String">
+        <value>*</value>
+      </setting>
     </BigVisibleCruise.Properties.Settings>
   </userSettings>
 </configuration>
